--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ 
+.app {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  align-items: center;
+  width: 100%;
+  margin: 0;
+  height: 100vh;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ 
+.container 
+{
+  box-shadow: 0px 5px 12px #000;
+  border-radius: 8px;
+  padding: 3rem;
+  font-weight: 700;
+  margin-top: 50px;
+  margin: 50px;
+  padding: 30px;
+  background-color: aquamarine;
 }
+.container h2
+{
+   text-align: center;
+   font-weight: 800;
+   font-family: sans-serif;
+   padding: 20px;
+}
+.container h2 span{
+  color: orangered;
+}
+.container p{
+  color: red;
+}
+input {
+  width: 100%;
+  font-size: 1.2rem;
+  padding: 10px 4px;
+  margin: 10px 0;
+  border-radius: 4px;
+}
+ 
+.btn {
+  display: block;
+  width: 100%;
+  font-size: 1.2rem;
+  margin: 8px 0;
+  padding: 10px 0;
+  background-color: #0077EE;
+  color: #fff;
+  border: 1px solid #333;
+  border-radius: 4px;
+  cursor: pointer;
+}
+/* unvisited link */
+ 
+.btn-outline {
+  background-color: #fff;
+  color: #000;
+}
+ 
+.center {
+  text-align: center;
+  margin: 24px 0;
+}
+ 
+p {
+  margin: 10px 0;
+}
+ 
+/* .img-container {
+  text-align: center;
+}
+ 
+.img-container img {
+  height: 200px;
+} */
