--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ 
+.app {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
 }
+ 
+.container {
+  box-shadow: 0px 5px 12px #000;
+  border-radius: 8px;
+  padding: 3rem;
+}
+ 
+input {
+  width: 100%;
+  font-size: 1.2rem;
+  padding: 10px 4px;
+  margin: 10px 0;
+  border-radius: 4px;
+}
+ 
+.btn {
+  display: block;
+  width: 100%;
+  font-size: 1.2rem;
+  margin: 8px 0;
+  padding: 10px 0;
+  background-color: #0077EE;
+  color: #fff;
+  border: 1px solid #333;
+  border-radius: 4px;
+  cursor: pointer;
+}
+/* unvisited link */
+ 
+.btn-outline {
+  background-color: #fff;
+  color: #000;
+}
+ 
+.center {
+  text-align: center;
+  margin: 24px 0;
+}
+ 
+p {
+  margin: 10px 0;
+}
+ 
+/* .img-container {
+  text-align: center;
+}
+ 
+.img-container img {
+  height: 200px;
+} */
